output/dev/block.err
output prefix: llvm/dev/block
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp ... ok
LogError: Unknown variable name
; ModuleID = 'C'
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "llvm/dev/block.llvm" -o "llvm/dev/block.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: llvm/dev/block.llvm:1:1: error: expected top-level entity
LogError: Unknown variable name
^
converting to native code:/Users/cmk/llvm/bin/llc "llvm/dev/block.llvm.bc" -o "llvm/dev/block.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: llvm/dev/block.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "llvm/dev/block.llvm.exec" "llvm/dev/block.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: 'llvm/dev/block.llvm.s'
running:llvm/dev/block.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
